# model-uncertainty-playground

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
data/: augmentations.py  data.py
src/data/: data.py
src/metrics/: classification.py
src/model/: inference.py  mc_dropout_inference.py
src/uncertainty/: ece.py  isotonic.py  platt.py  report.py  temperature_scaling.py
